--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Gleb Bahmutov <gleb.bahmutov@gmail.com>",
   "license": "BSD",
   "dependencies": {
-    "find-testers": "0.0.2"
+    "find-testers": "0.0.2",
+    "prompt": "~0.2.11"
   }
 }
