--- a/package.json
+++ b/package.json
@@ -12,5 +12,11 @@
   "dependencies": {
     "find-testers": "0.0.2",
     "prompt": "~0.2.11"
+  },
+  "devDependencies": {
+    "matchdep": "~0.1.2",
+    "grunt": "~0.4.1",
+    "grunt-bump": "0.0.11",
+    "grunt-contrib-jshint": "~0.6.3"
   }
 }
