--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "Gleb Bahmutov <gleb.bahmutov@gmail.com>",
   "license": "BSD",
   "dependencies": {
-    "find-testers": "0.0.2",
+    "find-testers": "0.0.3",
     "prompt": "~0.2.11",
     "check-types": "~0.6.4",
     "easy-table": "~0.2.0"
@@ -19,6 +19,7 @@
     "matchdep": "~0.1.2",
     "grunt": "~0.4.1",
     "grunt-bump": "0.0.11",
-    "grunt-contrib-jshint": "~0.6.3"
+    "grunt-contrib-jshint": "~0.6.3",
+    "gt": "~0.8.8"
   }
 }
