--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Finds testers by country and device command line tool",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ./node_modules/gt ./test/*.js"
   },
   "repository": "",
   "author": "Gleb Bahmutov <gleb.bahmutov@gmail.com>",
